[project]
name = "flask-study"
version = "0.1.0"
description = ""
authors = [{ name = "davidade300", email = "iaderinho@icloud.com" }]
readme = "README.md"
requires-python = ">=3.13,<4"

dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
